changed quartet font

--- a/views/quartet.html
+++ b/views/quartet.html
@@ -6,14 +6,16 @@
 	body {	
 		width: 600px;
 		margin: 20px auto;
-		font-family: arial;
+		font-family: Baskerville, "Baskerville Old Face", "Goudy Old Style", Garamond, "Times New Roman", serif;
+
+		/*font-family: arial;*/
 		font-size: 16px;
 	}
 
 	.title {
 		text-align: center;
-		font-color: red;
-		font-size: 34px;
+		font-family: Baskerville, "Baskerville Old Face", "Goudy Old Style", Garamond, "Times New Roman", serif;
+		font-size: 44px;
 	}
 
 	.axis path {
@@ -24,7 +26,8 @@
 	}
 
 	.axis text {
-		font: 15px sans-serif;
+		/*font: 15px sans-serif;*/
+		font-family: Baskerville, "Baskerville Old Face", "Goudy Old Style", Garamond, "Times New Roman", serif;
 	}
 
 	.axis line {
@@ -51,6 +54,10 @@
 <body>
 
 	<script>
+	//To Do
+	//bring hover-overed elements to fore
+	//
+
 	//IDEAS
 	//use .on to display exact coordinates on hover over, but display them just outside the tick text of the axes, and in blue
 
