--- a/views/quartet.html
+++ b/views/quartet.html
@@ -45,6 +45,14 @@
 		margin: 0 auto;
 	}
 
+	.trendline {
+
+    stroke: rgba(208,199,198,1);
+    stroke-width: 1px;
+    stroke-opacity: 0.75;
+
+  	}
+
 </style>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js" charset="utf-8"></script>
@@ -73,6 +81,8 @@
 			.range ([height, 0]);
 
 		var ticknum = 10
+
+		var numSteps = 20
 
 		var xAxis = d3.svg.axis()
 			.scale(xScale)
@@ -146,8 +156,8 @@
 			var adjustedYMin = d3.min(data3, function(d) { return d.y-1});
 			var adjustedYMax = d3.max(data3, function(d) { return d.y+1 });
 
-			xScale.domain([3, 20]).nice();
-			yScale.domain([3, 20]).nice();
+			xScale.domain([0, 20]).nice();
+			yScale.domain([0, 20]).nice();
 
 			svg.append("g")
 				.attr("class", "x axis")
@@ -192,39 +202,34 @@
 				.style("fill","#000")
 			});
 
-			console.log(data1)
-			xMap = data1.map(function(d) { return d.x });
-			console.log(xMap);
 
+			// get the x and y values for least squares
+		    var xSeries = data1.map(function(d) { return parseFloat(d['x']); });
+		    var ySeries = data1.map(function(d) { return parseFloat(d['y']); });
+		    
+		    console.log('xSeries: ' + xSeries);
+		    console.log('ySeries: ' + ySeries);
 
-			var xSeries = d3.range(1, xMap.length + 1);
-			console.log(xSeries);
+		    var leastSquaresCoeff = leastSquares(xSeries, ySeries);
 
-			// var ySeries = d3.range(1, yMap.length);
-			var ySeries = data1.map(function(d) { return d.y });
-			console.log(ySeries);
+		    var slope = leastSquaresCoeff[0];
+		    var intercept = leastSquaresCoeff[1];
+		    var rSquare = leastSquaresCoeff[2];
 
-			var leastSquaresCoeff = leastSquares(xSeries, ySeries);
+		    console.log("slope: " + slope);
+		    console.log("intercept: " + intercept);
+
+		    var trendline = svg.append("line")
+		        .attr("x1", xScale(0.))
+		        .attr("y1", yScale(intercept))
+		        .attr("x2", xScale(numSteps))
+		        .attr("y2", yScale(numSteps*slope + intercept))
+		        .classed("trendline", true);
+
+		    // d3.select('#eq-text').text("y = " + format2d(slope) 
+		    //                             + "x + " + format2d(intercept));
+
 			
-				// apply the reults of the least squares regression
-			var x1 = xMap[0];
-			var y1 = leastSquaresCoeff[0] + leastSquaresCoeff[1];
-			var x2 = xMap[xMap.length - 1];
-			var y2 = leastSquaresCoeff[0] * xSeries.length + leastSquaresCoeff[1];
-			var trendData = [[x1,y1,x2,y2]];
-			
-			var trendline = svg.selectAll(".trendline")
-				.data(trendData);
-			
-			trendline.enter()
-				.append("line")
-				.attr("class", "trendline")
-				.attr("x1", function(d) { return xScale(d[0]); })
-				.attr("y1", function(d) { return yScale(d[1]); })
-				.attr("x2", function(d) { return xScale(d[2]); })
-				.attr("y2", function(d) { return yScale(d[3]); })
-				.attr("stroke", "black")
-				.attr("stroke-width", 1);
 
 			// returns slope, intercept and r-square of the line
 			function leastSquares(xSeries, ySeries) {
@@ -249,34 +254,6 @@
 				return [slope, intercept, rSquare];
 			}
 
-
-			// //figure this out from http://bl.ocks.org/benvandyke/8459843
-
-			// 	// get the x and y values for least squares
-			// var xSeries = d3.range(1, xLabels.length + 1);
-			// var ySeries = data.map(function(d) { return parseFloat(d['rate']); });
-			
-			// var leastSquaresCoeff = leastSquares(xSeries, ySeries);
-			
-			// 	// apply the reults of the least squares regression
-			// var x1 = xLabels[0];
-			// var y1 = leastSquaresCoeff[0] + leastSquaresCoeff[1];
-			// var x2 = xLabels[xLabels.length - 1];
-			// var y2 = leastSquaresCoeff[0] * xSeries.length + leastSquaresCoeff[1];
-			// var trendData = [[x1,y1,x2,y2]];
-			
-			// var trendline = svg.selectAll(".trendline")
-			// 	.data(trendData);
-			
-			// trendline.enter()
-			// 	.append("line")
-			// 	.attr("class", "trendline")
-			// 	.attr("x1", function(d) { return xScale(d[0]); })
-			// 	.attr("y1", function(d) { return yScale(d[1]); })
-			// 	.attr("x2", function(d) { return xScale(d[2]); })
-			// 	.attr("y2", function(d) { return yScale(d[3]); })
-			// 	.attr("stroke", "black")
-			// 	.attr("stroke-width", 1);
 
 
 			function updateData(currentData) {
